[package]
name = "hujingzhi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
base64 = "0.21.2"
clap = { version = "4.3.4", features = [ "derive" ] }
dotenv = "0.15.0"
env_logger = "0.10.0"
futures-util = "0.3.28"
libc = "0.2.147"
rand = "0.8.5"
rcgen = "0.11.0"
reqwest = { version = "0.11.18", features = [ "json" ] }
serde = { version = "1.0.164", features = [ "derive" ] }
serde_json = "1.0.96"
serde_with = "3.0.0"
serde_yaml = "0.9.21"
subtle = "2.5.0"
tokio = { version = "1.28.2", features = [ "full" ] }
users = "0.11.0"
warp = { version = "0.3.5", features = [ "tls" ] }
